# selenium-python-boilerplate

./: README.md  conftest.py  pyproject.toml
selenium_python_boilerplate/helpers/: locators.py  loging.py
selenium_python_boilerplate/pages/: base_page.py
selenium_python_boilerplate/tests/: test_example.py
