[tool.poetry]
name = "selenium-python-boilerplate"
version = "0.1.0"
description = ""
authors = ["b1gslick <bigslick1106@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
